language/move-lang/tests/move_check/translated_ir_tests/move/commands/assign_wrong_if_branch_no_else.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/translated_ir_tests/move/commands/assign_wrong_if_branch_no_else.move:5:12
  │
3 │     let x: u64;
  │         - The variable 'x' might not have a value. The variable must be assigned a value before being used.
4 │     if (false) x = 100;
5 │     assert(x == 100, 42);
  │            ^ Invalid usage of unassigned variable 'x'

